[package]
name = "vdom-websocket-rsjs"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
serde_json = "1.0.18"
websocket = "0.20.2"
tokio-core = "0.1.17"

[dependencies.serde]
features = ["rc", "derive"]
version = "1.0.62"

[dependencies.vdom-rsjs]
git = "https://github.com/Nemo157/vdom-rsjs"
branch = "2018-edition"

[dev-dependencies]
tokio = "0.1.7"
