cargo-features = ["edition", "rename-dependency"]

[package]
name = "vdom-websocket-rsjs"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
serde_derive = "1.0.62"
serde_json = "1.0.18"
tokio = "0.1.7"
tokio-core = "0.1.17"

[dependencies.futures]
package = "futures-preview"
git = "https://github.com/Nemo157/futures-rs"
branch = "testing-compat"
features = ["tokio-compat"]

[dependencies.futures01]
package = "futures"
version = "0.1"

[dependencies.serde]
version = "1.0.62"
features = ["rc"]

[dependencies.vdom-rsjs]
git = "https://github.com/Nemo157/vdom-rsjs"
branch = "2018-edition"


[dependencies.websocket]
git = "https://github.com/Nemo157/rust-websocket"
branch = "send"
